created a test class MainFrameTest and browsing class

--- a/usermanagement/src/main/resources/settings.properties
+++ b/usermanagement/src/main/resources/settings.properties
@@ -3,4 +3,5 @@ connection.url=jdbc:hsqldb:file:db/usermanagement
 connection.user=sa
 connection.password=
 
+dao.factory=ua.nure.kn.momont.usermanagement.db.DaoFactoryImplementation
 dao.ua.nure.kn.momont.usermanagement.db.UserDao=ua.nure.kn.momont.usermanagement.db.HsqldbUserDao
