--- a/usermanagement/build.xml
+++ b/usermanagement/build.xml
@@ -1,8 +1,22 @@
 <project name="usermanagement" basedir="." default="test">
 	
 	<property name="main-java-dir" value="${basedir}/src/main/java"/>
+	<property name="main-webapp-dir" value="${basedir}/src/main/webapp"/>
+	<property name="main-webapp-webinf-dir" value="${main-webapp-dir}/WEB-INF"/>
+	
 	<property name="test-java-dir" value="${basedir}/src/test/java"/>
-	<property name="build-dir" value="${basedir}/bin"/>
+	
+	<property name="build-dir" value="${basedir}/target"/>
+	<property name="classes-dir" value="${build-dir}/classes"/>
+	<property name="test-result-dir" value="${build-dir}/test-result"/>
+	<property name="lib-dir" value="${basedir}/lib"/>
+	
+	<property name="war-name" value="users"/>
+	<property name="war-dir" value="${build-dir}/${war-name}"/>
+	<property name="war-jsp-dir" value="${war-dir}"/>
+	<property name="war-webinf-dir" value="${war-dir}/WEB-INF"/>
+	<property name="war-lib-dir" value="${war-webinf-dir}/lib"/>
+	<property name="war-classes-dir" value="${war-webinf-dir}/classes"/>
 	
 	<target name="clean">
 		<delete dir="${build-dir}"/>
@@ -13,7 +27,44 @@
 	</target>
 	
 	<target name="compile" depends="init">
-		<javac srcdir="${main-java-dir}" destdir="${build-dir}"/>
+			<javac srcdir="${main-java-dir}" destdir="${classes-dir}" nowarn="on"/>
+	</target>
+	
+	<target name="war.exploded" depends="compile">
+		<!-- скопировать все jsp -->
+		<copy todir="${war-jsp-dir}">
+			<fileset dir="${main-webapp-dir}"/>
+		</copy>
+		<!-- скопировать все либы -->
+		<copy todir="${war-lib-dir}">
+			<fileset dir="${lib-dir}">
+				<include name="hsqldb*.jar"/>
+				<include name="jstl*.jar"/>
+				<include name="standart*.jar"/>
+			</fileset>
+		</copy>
+		<!-- скопировать все конфиги -->
+		<copy todir="${war-classes-dir}">
+			<fileset dir="${main-resources-dir}"/>
+		</copy>
+		<!-- скопировать все классы -->
+		<copy todir="${war-classes-dir}">
+			<fileset dir="${classes-dir}"/>
+		</copy>
+	</target>
+	
+	<target name="war" depends="war.exploded">
+		<delete file="${build-dir}/${war-name}.war" failonerror="no"/>
+		<war destfile="${build-dir}/${war-name}.war" webxml="${main-webapp-webinf-dir}/web.xml">
+			<fileset dir="${war-jsp-dir}">
+				<exclude name="WEB-INF/*.*"/>
+			</fileset>
+			<classes dir="${war-classes-dir}"/>
+			<lib dir="${war-lib-dir}"/>
+			<webinf dir="${war-webinf-dir}">
+				<exclude name="web.xml"/>
+			</webinf>
+		</war>
 	</target>
 	
 	<target name="test-compile">
